add display html.

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>swell</title>
+    <title>waves</title>
   </head>
   <body>
       <nav class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">swell</a>
-
+            <a class="navbar-brand" href="#">waves</a>
           </div>
         </div>
       </nav>
 
-      <div id="displayMessage">
-
+      <div id="display">
+        <div>
+          <p>These conditions are reported by NOAA bouy 46029. For further information about this bouy see <a href="https://www.ndbc.noaa.gov/station_page.php?station=46029" target="blank">NOAA</a>.</p>
+        </div>
+        <p id="date"></p>
+        <p id="swellPeriod"></p>
+        <p id="swellHeight"></p>
+        <p id="windDirection"></p>
+        <p id="waveScore"></p>
       </div>
   </body>
 </html>
+
