--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div id="display">
         <div>
           <p>These conditions are reported by NOAA bouy 46029. For further information about this bouy see <a href="https://www.ndbc.noaa.gov/station_page.php?station=46029" target="blank">NOAA</a>.</p>
-          <p>The conditions listed are those used to calculate the day's surf score. To see the full list of conditions see the <a href="https://www.ndbc.noaa.gov/data/realtime2/46029.spec">raw bouy data</a>.</p>
+          <p>The conditions listed are those used to calculate the day's surf score. For a full list of conditions see the <a href="https://www.ndbc.noaa.gov/data/realtime2/46029.spec">raw bouy data</a>.</p>
         </div>
         <p id="date"></p>
         <p id="swellPeriod"></p>
